web-app/css/main.css
/* ... */
.panel-accordion .panel-heading > a.collapsed {
    background-color: #f2f2f2;
}

.panel-accordion .panel-title > a.collapsed:after {
    font-family: 'Glyphicons Halflings';
    content: "\e114";
    float: right;
    color: grey;
}

.panel-accordion .panel-body {
    background-color: #ffffff;
    position: relative;
}

.max-width-account {
    max-width: 180px;
}

.desktop-disclaimer {
    float: left;
}

.desktop-save {
    padding: 0.5em 0em 0.5em 1.75em;
    /* IE 10 flex */
    display: -ms-flexbox;
    -ms-flex: 0 1 auto;

    display: flex;
}

.direct-deposit #outerFooter {
    z-index: 13;
}

/* Webkit (e.g. iPhone) tweak to make text darker in a disabled input */
input:disabled {
    -webkit-opacity: 1;
    -webkit-text-fill-color:#869FB1;
}

.audible-message {
    position: absolute;
    top:0;
    left: -500px;
    width: 1px;
    height: 1px;
    overflow: hidden;
    color: transparent;
}
.audible-message-hidden {
    display: none;
    visibility: hidden;
}
.audible-message-visible {
    display: block;
    visibility: visible;
}


/********************************/
/* Add/Edit Account Page Styles */
/********************************/
.float-l {
    float: left;
}

.float-r {
    float: right;
}

.no-padding {
    padding: 0px;
}

.pad-left {
    padding-left: 15px;
}

.semi-bold {
    font-weight: bold;
}

.no-bold {
    font-weight: normal;
}

.no-display {
    display: none !important;
}

.clear-both {
    clear: both;
}

.visuallyhidden {
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height: 1px;
    width: 1px;
    margin: -1px;
    padding: 0;
    border: 0;
}

.existing-accts-old {
    padding-left: 2em;
}

.existing-accts {
    padding-left: 2em;
}

.input-field-label {
    padding: 0.875em 0em;
    margin: 0px;
}

.rout-num-lbl {
    max-width: 90%;
}

.field-error {
    color: #CD3B3E;
}

.error-font-size {
    font-weight: normal;
}

.text-input-field {
    border-radius: 4px;
    background-color: #fff;
    border:1px solid #869FB1;
    box-shadow: 4px 4px #EDF3F6 inset;
    width: 100%;
    color: #869FB1;
}

@media(max-width:568px){
    .xs-fix {
        width: 100%;
    }
}

@media(max-width:767px){
    .clear-xs-sm {
        clear: both;
    }
}

.text-input-field::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color: #869FB1;
    font-weight: bold;
}
.text-input-field:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color: #869FB1;
   font-weight: bold;
   opacity:  1;
}
.text-input-field::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: #869FB1;
   font-weight: bold;
   opacity:  1;
}
.text-input-field:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: #869FB1;
   font-weight: bold;
}

.dropdown .input-field-error,
.input-field-error,
.radio-txt-input.input-field-error {
    background-color: #F6E5E6;
    border:1px solid #CD3B3E;
    box-shadow: 3px 3px #F0D3D3 inset;
    color: #CD3B3E;
}

.input-field-error::-webkit-input-placeholder { /* WebKit, Blink, Edge */
    color: #CD3B3E;
    font-weight: bold;
}
.input-field-error:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
   color: #CD3B3E;
   font-weight: bold;
   opacity:  1;
}
.input-field-error::-moz-placeholder { /* Mozilla Firefox 19+ */
   color: #CD3B3E;
   font-weight: bold;
   opacity:  1;
}
.input-field-error:-ms-input-placeholder { /* Internet Explorer 10-11 */
   color: #CD3B3E;
   font-weight: bold;
}

.input-fail {
    position: absolute;
    float: right;
    right: 0.75em;
    bottom: 1.0em;
    background: #F6E5E6;
}

.icon .icon-error {
    font-size: 16px;
}

.amt-input-fail {
    position: absolute;
    float: right;
    left: 13.65em;
    top: 8.88em;
    background: #F6E5E6;
}

.existing-accts-old .amt-input-fail {
    position: relative;
    top: 0.15em;
    right: 2.25em;
    left: auto;
    float: none;
}

.desktop-listing .amt-input-fail {
    position: absolute;
    float: right;
    left: 13.1em;
    top: 6.35em;
    background: #F6E5E6;
}

.pct-input-fail {
    position: absolute;
    float: right;
    left: 13.65em;
    top: 11.2em;
    background: #F6E5E6;
}

.existing-accts-old .pct-input-fail {
    position: relative;
    top: 0.15em;
    right: 3.35em;
    left: auto;
    float: none;
}

.desktop-listing .pct-input-fail {
    position: absolute;
    float: right;
    left: 13.1em;
    top: 9em;
    background: #F6E5E6;
}

.icon-error.ellucian-font,
.icon-caret-down.ellucian-font {
    font-family: ellucian;
}

.text-input-field:focus,
.radio-txt-input:focus {
    border-style: solid;
    border-width: 1px;
    border-color: #206E9F;
    box-shadow: 0px 2px #CBE2E8 inset;
    color: #4F585F;
}

.input-bank-name {
    position: absolute;
    float: right;
    right: 0.75em;
    bottom: 1.185em;
    color: #869FB1;
    line-height: 118%;
}

.dialog-hdr1 {
    font-size: 30px;
    margin: 0px;
    padding: 1em 1em 0.5em;
}

.dialog-footer-margin {
    margin-top: 1.5em;
}

.disclaimer-margin {
    margin-top: 1.25em;
}

.dialog-hdr2 {
    margin: 0px;
    float: right;
    width: 100%;
}

button.closebtn {
    color: #4f585f;
    opacity: 1;
    font-size: 14px;
    font-family: open-sans-semi-bold;
    background: url('../images/close.svg') 50% 50% no-repeat;
    padding: 2.85em;
    display: block;
    border: none;
    float: right;
}

.modal-footer.addAcct {
    display: table;
    padding: 1px 0px 0px;
    border-top: 1px solid black;
    width: 100%;
}

.dialog-btn {
    box-sizing: border-box;
    display: table-cell;
    width: 50%;
    text-align: center;
    vertical-align: middle;
    font-size: 18px;
    overflow: auto;
    border-style: none;
    border-radius: 6px;
    background: white;
    color: #206E9F;
    line-height: normal;
    padding: 1em;
}

.dird-footer-container {
    position: absolute;
    bottom: 49px;
    left: 0;
}
/* ... */

